tests/ui/directory_ownership/macro-expanded-mod.stderr
error: cannot declare a non-inline module inside a block unless it has a path attribute
  --> $DIR/macro-expanded-mod.rs:5:9
   |
LL |         mod $i;
   |         ^^^^^^^
...
LL |     mod_decl!(foo);
   |     -------------- in this macro invocation
   |
   = note: this error originates in the macro `mod_decl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

